--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
 fastapi>=0.110.0,<1.0.0
 uvicorn[standard]>=0.30.0,<0.31.0
-google-generativeai>=0.7.0,<0.8.0
+google-generativeai==0.3.2
 jinja2>=3.1.0,<4.0.0
