--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi>=0.110.0,<1.0.0
 uvicorn[standard]>=0.30.0,<0.31.0
-google-generativeai==0.3.2
+google-generativeai>=0.8.0,<0.9.0
 jinja2>=3.1.0,<4.0.0
+openai>=1.52.0,<2.0.0
